Added plugin versioning, finished basic 404 page plugin, finished package developer plugin, removed content directory, added core syncing and template dumping (reason for content directory removal/exclusion), fixed trailing slash bug with path info.

--- a/Layout/index.html
+++ b/Layout/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>&uuml;ber CMS</title>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-	<link type="text/css" href="./Content/CSS/Layout.css" rel="Stylesheet" />
+	<link type="text/css" href="./content/css/layout.css" rel="Stylesheet" />
 </head>
 <body>
 	<div class="AREA_SHADOW"></div>
@@ -11,12 +11,12 @@
 		<div class="AREA_BANNER">
 			<div class="AUTH">
 				<a href="/login">
-					<img src="./Content/Images/Layout/login.png" alt="Login" />
+					<img src="./content/images/layout/login.png" alt="Login" />
 					Login
 				</a>
 				<div class="SEP"></div>
 				<a href="/register">
-					<img src="./Content/Images/Layout/register.png" alt="Login" />
+					<img src="./content/images/layout/register.png" alt="Login" />
 					Register
 				</a>
 			</div>
