--- a/Layout/index.html
+++ b/Layout/index.html
@@ -107,6 +107,12 @@
 					<td>row 3 col 2</td>
 				</tr>
 			</table>
+			<p class="ERROR">
+				Error box test message!
+			</p>
+			<p class="SUCCESS">
+				Success box test message!
+			</p>
 		</div>
 		<div class="clear"></div>
 	</div>
