--- a/Layout/Content/css/layout.css
+++ b/Layout/Content/css/layout.css
@@ -247,7 +247,7 @@ body
 	padding: 0.5em;
 	border: solid 0.1em #333;
 }
-.AREA_CONTENT table th
+.AREA_CONTENT table th, .TABLE .HEADER
 {
 	background: #000;
 	color: #FFF;
@@ -266,7 +266,7 @@ body
 {
     display: block;
 }
-.TABLE .HEADER, .TABLE .ROW .CELL1, .TABLE .ROW .CELL2, .TABLE .ROW .CELL3, .TABLE .ROW .CELL4
+.TABLE .ROW .CELL1, .TABLE .ROW .CELL2, .TABLE .ROW .CELL3, .TABLE .ROW .CELL4
 {
     vertical-align: middle;
     display: inline-block;
