--- a/Layout/index.html
+++ b/Layout/index.html
@@ -86,6 +86,12 @@
 			</p>
 			<h4>CSS Table Test</h4>
 			<div class="TABLE">
+				<div class="ROW HEADER">
+					<div class="CELL1">
+						test
+					</div>
+					<div class="clear"></div>
+				</div>
 				<div class="ROW">
 					<div class="CELL2">row 1 col 1</div>
 					<div class="CELL2">row 1 col 2</div>
