--- a/Layout/index.html
+++ b/Layout/index.html
@@ -22,7 +22,7 @@
 					</a>
 					<div class="SEP"></div>
 					<!--IF:Administrator-->
-					<a href="/my_account">
+					<a href="/admin">
 						<img src="/content/images/layout/admin.png" alt="Admin" />
 						Admin
 					</a>
